--- a/app/src/main/res/layout/activity_dosen.xml
+++ b/app/src/main/res/layout/activity_dosen.xml
@@ -25,6 +25,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bang Dudi"/>
+        android:text="Baim"/>
 
 </LinearLayout>
